src/objects/JBCXM__OpportunityFieldMap__c.object
<CustomObject>
    <description>This object holds the Mapping information between Opportunity fields and JBara TransHeader and JBara TransLines objects.</description>
    <fields>
        <fullName>JBCXM__Defaults__c</fullName>
        <description>Default data to be used for required fields in Opportunity</description>
        <inlineHelpText>Default data to be used for required fields in Opportunity</inlineHelpText>
        <label>Defaults</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__JBaraField__c</fullName>
        <description>The JBara Header Field or item that is mapped</description>
        <inlineHelpText>The JBara Header Field or item that is mapped</inlineHelpText>
        <label>JBara Field</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__MapRules__c</fullName>
        <description>This contains the map rules against booking types.</description>
        <label>Map Rules</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__OpportunityField__c</fullName>
        <description>The opportunity field that is mapped</description>
        <inlineHelpText>The opportunity field that is mapped</inlineHelpText>
        <label>Opportunity Field</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <description>The type of the mapping field that specifies if the mapping is related to JBara TransHeader of the JBara TransLines Objects. There are also be Opportunity Fields that are required but are not mapped to JBara objects. In this case provide a Default value</description>
        <inlineHelpText>The type of the mapping field that specifies if the mapping is related to JBara TransHeader of the JBara TransLines Objects. There are also be Opportunity Fields that are required but are not mapped to JBara objects. In this case provide a Default value</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JBara Header Field</fullName>
                </value>
                <value>
                    <fullName>JBara Line Item</fullName>
                </value>
                <value>
                    <fullName>Booking Type</fullName>
                </value>
                <value>
                    <fullName>Opportunity Required Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Opportunity Field Map</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Field Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>